This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: missing header on android for the ossaudiodev module
Type: compile error Stage: resolved
Components: Cross-Build Versions: Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: skrah Nosy List: Alex.Willmer, python-dev, skrah, xdegaye, yan12125
Priority: normal Keywords: patch

Created on 2016-04-26 13:07 by xdegaye, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
ossaudiodev.patch xdegaye, 2016-04-26 13:07 review
Messages (5)
msg264276 - (view) Author: Xavier de Gaye (xdegaye) * (Python triager) Date: 2016-04-26 13:07
On linux /usr/include/sys/soundcard.h includes /usr/include/linux/soundcard.h while on android (also a linux) there is only /usr/include/linux/soundcard.h

Patch attached.
msg264298 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-04-26 14:49
New changeset d943e6f7c9f3 by Stefan Krah in branch 'default':
Issue #26854: Android has a different include path for soundcard.h.
https://hg.python.org/cpython/rev/d943e6f7c9f3
msg264299 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2016-04-26 14:52
Thanks!
msg264316 - (view) Author: (yan12125) * Date: 2016-04-26 16:46
Maybe checking sys/soundcard.h and linux/soundcard.h in configure.ac is better?

[1] https://github.com/yan12125/python3-android/blob/cpython-hg/mk/python/soundcard-h-path.patch
msg264321 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2016-04-26 17:55
Since Android is the only known system with an odd include path, I
prefer the short patch. In general, let's try to keep patches as
short as possible (which Xavier is already doing).
History
Date User Action Args
2022-04-11 14:58:30adminsetgithub: 71041
2016-04-26 17:55:40skrahsetmessages: + msg264321
2016-04-26 16:46:25yan12125setnosy: + yan12125
messages: + msg264316
2016-04-26 16:04:41zach.warelinkissue26865 dependencies
2016-04-26 14:52:12skrahsetstatus: open -> closed

assignee: skrah

nosy: + skrah
messages: + msg264299
resolution: fixed
stage: resolved
2016-04-26 14:49:38python-devsetnosy: + python-dev
messages: + msg264298
2016-04-26 13:07:45xdegayecreate