Issue #26854: Android has a different include path for soundcard.h.